--- a/Demo_Files/Nginx_Deployment_Prune/nginx-deployment-prune.yaml
+++ b/Demo_Files/Nginx_Deployment_Prune/nginx-deployment-prune.yaml
@@ -34,11 +34,11 @@ spec:
       targetPort: 80
 
 ---
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: example-configmap
-  namespace: argocdappdemo
-data:
-  key1: value1
-  key2: value2
+# apiVersion: v1
+# kind: ConfigMap
+# metadata:
+#   name: example-configmap
+#   namespace: argocdappdemo
+# data:
+#   key1: value1
+#   key2: value2
