--- a/Demo_Files/Sync_Retry/sync-options-retry.yaml
+++ b/Demo_Files/Sync_Retry/sync-options-retry.yaml
@@ -15,8 +15,7 @@ spec:
     spec:
       containers:
         - name: nginx
-          # image: nginx:1.14.2
-          image: nginx:non-existent
+          image: nginx:1.14.2
           ports:
             - containerPort: 80
 
