--- a/Demo_Files/Liveness_Deployment/http-liveness.yaml
+++ b/Demo_Files/Liveness_Deployment/http-liveness.yaml
@@ -6,16 +6,16 @@ metadata:
   name: liveness-http
 spec:
   containers:
-  - name: liveness
-    image: registry.k8s.io/liveness
-    args:
-    - /server
-    livenessProbe:
-      httpGet:
-        path: /healthz1
-        port: 8080
-        httpHeaders:
-        - name: Custom-Header
-          value: Awesome
-      initialDelaySeconds: 3
-      periodSeconds: 3
+    - name: liveness
+      image: registry.k8s.io/liveness:latest
+      args:
+        - /server
+      livenessProbe:
+        httpGet:
+          path: /healthz1
+          port: 8080
+          httpHeaders:
+            - name: Custom-Header
+              value: Awesome
+        initialDelaySeconds: 3
+        periodSeconds: 3
