--- a/Demo_Files/Liveness_Deployment/liveness-deployment.yaml
+++ b/Demo_Files/Liveness_Deployment/liveness-deployment.yaml
@@ -13,16 +13,16 @@ spec:
         app: liveness-demo
     spec:
       containers:
-      - name: liveness
-        image: registry.k8s.io/liveness
-        args:
-        - /server
-        livenessProbe:
-          httpGet:
-            path: /healthz
-            port: 8080
-            httpHeaders:
-            - name: Custom-Header
-              value: Awesome
-          initialDelaySeconds: 3
-          periodSeconds: 3
+        - name: liveness
+          image: registry.k8s.io/liveness:latest
+          args:
+            - /server
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8080
+              httpHeaders:
+                - name: Custom-Header
+                  value: Awesome
+            initialDelaySeconds: 3
+            periodSeconds: 3
